<resources>
    <string name="app_name">Milchmom Customer</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="aboutus"> About Milchmom \10\10 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. \10\10 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisis gravida neque convallis a. Duis ultricies lacus sed turpis tincidunt id. In massa tempor nec feugiat nisl pretium. Velit scelerisque in dictum non consectetur a erat. Interdum posuere lorem ipsum dolor sit amet. Consequat interdum varius sit amet mattis vulputate enim nulla. Vitae suscipit tellus mauris a diam maecenas sed enim ut. Ac auctor augue mauris augue neque. Congue nisi vitae suscipit tellus mauris a diam. Mauris rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar. Est pellentesque elit ullamcorper dignissim cras. In metus vulputate eu scelerisque felis. Morbi enim nunc faucibus a. Amet mauris commodo quis imperdiet massa tincidunt nunc. \10\10 How are we different ? \10\10 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vel fringilla est ullamcorper eget nulla facilisi. Bibendum enim facilisis gravida neque. Sed egestas egestas fringilla phasellus faucibus scelerisque. Aliquam malesuada bibendum arcu vitae elementum curabitur. Sed sed risus pretium quam vulputate dignissim suspendisse in est. Leo urna molestie at elementum eu. Donec massa sapien faucibus et molestie ac. \10\10 Are you tired of hunting for milk ? \10\10 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Fringilla ut morbi tincidunt augue interdum velit. In arcu cursus euismod quis viverra nibh cras pulvinar. Quis auctor elit sed vulputate mi. Libero enim sed faucibus turpis in. Ultrices in iaculis nunc sed augue lacus. Quis auctor elit sed vulputate mi sit. Eget sit amet tellus cras adipiscing enim. Vitae justo eget magna fermentum iaculis eu non diam. Pellentesque pulvinar pellentesque habitant morbi tristique. Consequat semper viverra nam libero justo. Consectetur a erat nam at lectus. Faucibus purus in massa tempor nec. Et sollicitudin ac orci phasellus egestas tellus rutrum tellus. A scelerisque purus semper eget duis at. Dui ut ornare lectus sit amet est. \10\10Quis commodo odio aenean sed adipiscing diam donec adipiscing tristique. Curabitur vitae nunc sed velit dignissim. Ac ut consequat semper viverra nam libero justo laoreet. Dictum varius duis at consectetur lorem. Vel fringilla est ullamcorper eget nulla facilisi. Bibendum enim facilisis gravida neque. Sed egestas egestas fringilla phasellus faucibus scelerisque. Aliquam malesuada bibendum arcu vitae elementum curabitur. Sed sed risus pretium quam vulputate dignissim suspendisse in est. Leo urna molestie at elementum eu. Donec massa sapien faucibus et molestie ac. \10\10Imperdiet dui accumsan sit amet nulla facilisi morbi. Sed nisi lacus sed viverra. Eu feugiat pretium nibh ipsum. Iaculis urna id volutpat lacus laoreet non curabitur gravida arcu. Cursus vitae congue mauris rhoncus. Commodo odio aenean sed adipiscing diam donec adipiscing tristique. Quis viverra nibh cras pulvinar mattis nunc sed blandit libero. Enim nunc faucibus a pellentesque sit amet. Id faucibus nisl tincidunt eget nullam non nisi est sit. Ultrices gravida dictum fusce ut placerat. Faucibus scelerisque eleifend donec pretium vulputate sapien nec sagittis aliquam. Eget nunc lobortis mattis aliquam faucibus purus. Purus ut faucibus pulvinar elementum integer enim neque. At in tellus integer feugiat. Vulputate enim nulla aliquet porttitor lacus luctus. </string>
    <string name="action_settings">Settings</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="btn_location">Change location</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="header_nav_email">Simanjitn@gmail.com</string>
    <string name="header_nav_name">Simanjit Nayak</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="location">South Kolkata</string>
    <string name="menu_About_us">About us</string>
    <string name="menu_Offers">Offers</string>
    <string name="menu_Profile">Profile</string>
    <string name="menu_Rateus">Rateus</string>
    <string name="menu_Support">Support</string>
    <string name="menu_Wallet">Your order</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_history">Order History</string>
    <string name="menu_home">Home</string>
    <string name="menu_send">Send</string>
    <string name="menu_share">Share</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="msg">Welcome to Milchmom \10 Delivery App </string>
    <string name="msg_btn">Get Otp</string>
    <string name="msg_number">+91 Enter your Mobile Number</string>
    <string name="msgotp">Enter OTP to Proceed</string>
    <string name="msgotp1">Wait 15s Before you can resend the Code</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select a Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select a Date Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="mtrl_picker_text_input_month_abbr">m</string>
    <string name="mtrl_picker_text_input_year_abbr">y</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to selecting a year</string>
    <string name="nav_app_bar_navigate_up_description">Navigate up</string>
    <string name="nav_app_bar_open_drawer_description">Open navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="search">Search your product</string>
</resources>